--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html lang="en">
 <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" shrink-to-fit=no">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" shrink-to-fit="no">
     <meta content="portfolio website for akshay sharma" name="description">
     <meta content="Akshay Sharma https://github.com/akshay2211" name="author">
-    <title>AKSHAY SHARMA</title>
+    <title>THANKS</title>
+    <link href="img/favicon.ico" rel="shortcut icon"/>
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/bootstrap-grid.css" rel="stylesheet">
 </head>
 <body>
 </body>
