--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     <link href="css/bootstrap-grid.css" rel="stylesheet">
 </head>
 <body>
+    
+<button onclick="dayNightToggle()">Toggle dark mode</button>
+<div class="container vertical-center">
+    <div class="row spacing">
+      
+    </div>
+</div>
+
+<script src="js/load.js" type="text/javascript"></script>
+<script>
 </body>
 </html>
